@@ -11,6 +11,9 @@ Notes:
   - http://msdn.microsoft.com/en-us/library/windows/desktop/ms679351(v=vs.85).aspx
   - http://blogs.msdn.com/b/oldnewthing/archive/2007/11/28/6564257.aspx
 
+20150407
+* worked on tests
+
 20150406
 * code clean up
 * worked on tests
